# Boniface

./: .gitignore  Boniface.cbp  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.txt  a.out  cmake_install.cmake  hello_world  main.cpp  nginx.conf  web_framework.cbp
.github/workflows/: codeql-analysis.yml
app/: App.cpp  App.h  MiddlewareManager.h  app.cpp
context/: Context.cpp  Context.h  Request.cpp  Request.h  Response.cpp  Response.h  utils.hpp
context/request/: Request.cpp  Request.h
context/response/: Response.cpp  Response.h
examples/: main.cpp  user.h
middleware/: LambdaMiddleware.cpp  LambdaMiddleware.h  Middleware.h  MiddlewareManager.cpp  MiddlewareManager.h
router/: CacheKey.h  LambdaHandler.cpp  LambdaHandler.h  Layer.cpp  Layer.h  Router.cpp  Router.h  RouterMiddleware.cpp  RouterMiddleware.h  StrictLayer.cpp  StrictLayer.h
router/cache/: CacheKey.cpp
router/handler/: Handler404.cpp  Handler404.h  HandlerSetStatusCode.cpp
router/layer/: Layer.cpp  Layer.h  StrictLayer.cpp  StrictLayer.h  TrulyLayer.cpp
routing/: Router.cpp  Router.h
src/app/: App.cpp  App.h
src/context/: Context.cpp  Context.h  utils.hpp
src/context/request/: Request.cpp  Request.h
src/context/response/: Response.h
src/middleware/: Handler.h  Middleware.cpp  MiddlewareManager.cpp  MiddlewareManager.h
src/router/: LambdaHandler.cpp  Router.cpp  Router.h
src/router/handler/: HandlerSetStatusCode.h
src/router/layer/: Layer.cpp  Layer.h  StrictLayer.cpp  TrulyLayer.h
