cmake_minimum_required(VERSION 3.15)
project(Boniface)
SET(CMAKE_CXX_FLAGS  "-lfcgi")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
set(CMAKE_CXX_STANDARD 20)
#add_definitions(${CMAKE_CXX_FLAGS})
add_executable(Boniface examples/main.cpp app/App.h app/App.cpp context/request/Request.cpp context/request/Request.h context/response/Response.cpp context/response/Response.h context/Context.cpp context/Context.h middleware/MiddlewareManager.cpp middleware/MiddlewareManager.h context/utils.hpp router/Router.h router/Router.cpp middleware/Middleware.cpp middleware/Middleware.h router/layer/Layer.cpp router/layer/Layer.h router/RouterMiddleware.cpp router/RouterMiddleware.h router/LambdaHandler.cpp router/LambdaHandler.h router/layer/StrictLayer.cpp router/layer/StrictLayer.h middleware/Handler.h router/layer/TrulyLayer.cpp router/layer/TrulyLayer.h router/handler/HandlerSetStatusCode.cpp router/handler/HandlerSetStatusCode.h)
#target_link_libraries(Boniface ${FASTCGI})
target_link_libraries(${PROJECT_NAME} fcgi)